# coddpiece

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ISSUES.md  LICENSE  README.md  RELEASING.md  THEORY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
coddpiece/: __init__.py  aggregates.py  compiler.py  datasets.py  display.py  engine.py  errors.py  predicates.py  relation.py  schema.py
docs/reviews/: review-20260621-080500.md
tests/: conftest.py  test_all.py  test_postgres.py
