[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coddpiece"
version = "0.1.0"
description = "coddpiece — A Python relational algebra teaching library backed by real databases via DB-API 2.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["relational-algebra", "sql", "database", "education", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Education",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
postgres = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["coddpiece*"]
